# georelational-tool

./: .Dockerfile  .gitignore  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg
geo_data/: minnesota.json
project/: asgi.py  settings.py  urls.py
region_builder/: __init__.py  admin.py  apps.py  geo_mapper.py  models.py  serializers.py  signal_handlers.py  tests.py  urls.py  views.py
region_builder/migrations/: 0001_initial.py
region_builder/templates/: base.html  state.html
