[metadata]
name = georelational-tool
version = 0.0.1

[options]
packages =
    cabins-app
    project

[bdist_wheel]
universal = 1

[flake8]
exclude = .tox,migrations,doc/*,venv*,local_settings*,trees_tests,management,node_modules,wsgi*
max-line-length = 120
max-complexity = 19

[isort]
atomic=true
combine_as_imports=false
indent=4
known_standard_library=token,tokenize,enum,importlib
known_third_party=django
length_sort=false
line_length=120
multi_line_output=5
order_by_type=false
skip=migrations,node_modules,conftest.py,wsgi.py,venv
wrap_length=120

[prequ]
annotate = yes

requirements =
    Django==3.1.5
    djangorestframework==3.12.2
    gunicorn==20.0.4
    psycopg2-binary==2.8.5
    
requirements-test =
    flake8==3.8.4
    isort==5.6.4

requirements-dev =
    autoflake==1.4
    django-debug-toolbar==3.2
    prequ==1.4.7